plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
}

group = 'com.example'
version = '0.1.0'
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.2'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.2'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.2.2'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.2'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'com.h2database:h2:2.2.224'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.2'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.2.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.2'
    testImplementation 'org.springframework.security:spring-security-test:6.2.1'
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs += ['-Dnet.bytebuddy.experimental=true']
}
